--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "bunyan": "^2.0.2",
+    "bunyan-loggly": "^1.4.1",
     "config": "^3.1.0",
-    "decentium": "^1.0.0",
+    "decentium": "^1.1.0",
     "eosjs": "^20.0.0",
     "feed": "^4.0.0",
     "node-fetch": "^2.6.0",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/bunyan": "^1.8.6",
     "@types/config": "^0.0.34",
+    "@types/lru-cache": "^5.1.0",
     "@types/node": "^12.0.8",
     "@types/node-fetch": "^2.3.7",
     "onchange": "^6.0.0",
