--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eosjs": "^20.0.0",
     "feed": "^4.0.0",
     "node-fetch": "^2.6.0",
+    "p-queue": "^6.1.1",
     "toml": "^2.3.3"
   },
   "devDependencies": {
